# blockid

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
blockid/: Cargo.toml  build.rs
blockid/libblockid_core/: Cargo.toml
blockid/libblockid_core/src/: lib.rs  partition.rs  probe.rs  util.rs
blockid/libblockid_core/src/partition/: mbr.rs
blockid/src/: logger.rs  main.rs
libblockid/: Cargo.toml  README.md  build.rs
libblockid/.cargo/: config.toml
libblockid/headers/: test.txt
libblockid/libblockid_core/: Cargo.toml  README.md
libblockid/libblockid_core/src/: error.rs  filesystem.rs  io.rs  lib.rs  probe.rs  util.rs
libblockid/libblockid_core/src/filesystem/: exfat.rs  ext.rs  vfat.rs
libblockid/libblockid_sys/: Cargo.toml
libblockid/libblockid_sys/src/: lib.rs  main.rs
libblockid/src/: checksum.rs  containers.rs  crc32c.rs  error.rs  filesystem.rs  filesystems.rs  io.rs  ioctl.rs  lib.rs  nostd_io.rs  partition.rs  partitions.rs  path.rs  probe.rs  tests.rs  topology.rs  util.rs  vfat.rs  volume_id.rs
libblockid/src/containers/: luks.rs  lvm.rs  mod.rs
libblockid/src/filesystem/: apfs.rs  cramfs.rs  exfat.rs  ext.rs  luks.rs  ntfs.rs  vfat.rs  vxfs.rs  xfs.rs
libblockid/src/filesystems/: apfs.rs  exfat.rs  ext.rs  linux_swap.rs  mod.rs  ntfs.rs  squashfs.rs  swap.rs  vfat.rs  volume_id.rs  xfs.rs  zonefs.rs
libblockid/src/io/: block.rs  ioctl.rs  no_std.rs  path.rs  std.rs  unix.rs
libblockid/src/io/ioctl/: linux.rs  macos.rs
libblockid/src/io/no_std/: path.rs
libblockid/src/partition/: aix.rs  gpt.rs  mbr.rs
libblockid/src/partitions/: aix.rs  bsd.rs  dos.rs  gpt.rs  minix.rs  mod.rs  solaris_x86.rs  unixware.rs
libblockid/src/probe/: mod.rs
libblockid/src/topology/: macos.rs
libblockid/tests/: extract.sh  luks-key.txt
libblockid_core/: Cargo.toml  README.md
libblockid_core/src/: error.rs  filesystem.rs  io.rs  lib.rs  probe.rs
libblockid_core/src/filesystem/: exfat.rs  ext.rs  luks.rs  vfat.rs
libblockid_core/src/partition/: gpt.rs  mbr.rs
libblockid_sys/: Cargo.toml  README.md
libblockid_sys/src/: error.rs  io.rs  ioctl.rs  lib.rs  path.rs  probe.rs  topology.rs
libblockid_sys/src/ioctl/: freebsd.rs  linux.rs  macos.rs
rs-blkid/: Cargo.toml
rs-blkid/src/: main.rs
rs-libblkid/: Cargo.toml
rs-libblkid/src/: ext4.rs  fat.rs  gpt.rs  lib.rs  mbr.rs
rs-libblkid/src/fat/: exfat.rs  fat32_16.rs  mod.rs
