[package]
name = "libblockid"
version = "0.1.0"
edition = "2024"
description = "Block device identification library"
readme = "README.md"
homepage = "https://github.com/rysndavjd/blockid"
repository = "https://github.com/rysndavjd/blockid"
keywords = ["partition", "filesystem", "superblock", "no_std"]
categories = ["filesystem", "no-std", "parsing"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = { version = "2.11.0", default-features = false }
zerocopy = { version = "0.8.48", default-features = false, features = [
    "derive",
    "alloc",
] }
uuid = { version = "1.16.0", default-features = false, features = ["zerocopy"] }
widestring = { version = "1.2.1", default-features = false, features = [
    "alloc",
] }
fat_volume_id = { version = "0.3.0", default-features = false, features = [
    "id32",
    "id64",
    "alloc",
    "zerocopy",
    "serde",
] }
crc = { version = "3.4.0", default-features = false }

embedded-io = { version = "0.7.1", default-features = false, features = [
    "alloc",
], optional = true }
rustix = { version = "1.1.4", default-features = false, features = [
    "stdio",
    "fs",
    "alloc",
], optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"], optional = true }

# For getting path from FD we use fcntl on macOS and FreeBSD and for Linux
# we use `/proc/self/fd/<fd>`
[target.'cfg(any(target_os = "macos", target_os = "freebsd"))'.dependencies]
libc = { version = "0.2.186", default-features = false }

[features]
default = ["std", "os_calls", "serde"]
std = [
    "zerocopy/std",
    "bitflags/std",
    "widestring/std",
    "fat_volume_id/std",
    "uuid/std",
    "rustix/std",
    "libc/std",
    "serde/std",
]
no_std = ["dep:embedded-io"]
os_calls = ["dep:rustix"]
serde = ["dep:serde", "uuid/serde", "bitflags/serde"]